tests/negative/gold/implicit-import-test.gold
tests/negative/implicit-import-test.toit:10:7: error: Unresolved identifier: 'List'
  pre.List
      ^~~~
Compilation failed
